# EclairLang

./: CMakeLists.txt  LICENSE.txt  README.md  main.cpp
.github/workflows/: makefile.yml
include/eclair/AST/: AST.h
include/eclair/Basic/: Diagnostic.h  LLVM.h  Name.h  TokenKinds.def  TokenKinds.h
include/eclair/Driver/: Driver.h
include/eclair/Lexer/: Lexer.h  Token.h  TokenStream.h
include/eclair/Parser/: Parser.h
lib/Basic/: Diagnostic.cpp  TokenKinds.cpp
lib/CodeGen/: Decls.cpp  Exprs.cpp  Stmts.cpp  Types.cpp
lib/CodeGen2/: Stmts.cpp  Types.cpp
lib/Driver/: Driver.cpp
lib/Lexer/: Lexer.cpp  TokenStream.cpp
lib/Parser/: Parser.cpp
lib/Semantic/: Decls.cpp  Exprs.cpp
sandbox/: eclair  eratosthenes.ecl  fibanachi.ecl  qsort.ecl
